--- a/Image.html
+++ b/Image.html
@@ -138,7 +138,7 @@
 			<li><i class="fas fa-check"></i> <a href="aboutus.html" target="blank">About us</a></i></li><br>
 			<li><i class="fas fa-check"></i> <a href="targets.html" target="parent">Targets</a></li><br>
 			<li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
-			<li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
+			<li><i class="fas fa-check"></i> <a href="solution.html">Challenges & Solutions</a></li>
                             </ul>
 	</div>
 </body>
