--- a/targets.html
+++ b/targets.html
@@ -365,7 +365,7 @@ font-size:18px">
     <li><i class="fas fa-check"></i> <a href="aboutus.html">About us</a></i></li><br>
     <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
     <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
+    <li><i class="fas fa-check"></i> <a href="solution.html">Challenges & Solutions</a></li>
                           </ul>
 </div>
 </div>
