--- a/targetsdef.html
+++ b/targetsdef.html
@@ -192,7 +192,7 @@ li a:hover {
     <li><i class="fas fa-check"></i> <a href="aboutus.html">About us</a></i></li><br>
     <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
     <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="blank">More about targets</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
+    <li><i class="fas fa-check"></i> <a href="solution.html">Challenges & Solutions</a></li>
                           </ul>
 </div>
 </body>
