--- a/aboutus.html
+++ b/aboutus.html
@@ -190,7 +190,7 @@ html {
   <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
   <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
   <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="blank">More about targets</a></li><br>
-  <li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
+  <li><i class="fas fa-check"></i> <a href="solution.html" target="blank">Challenges & Solutions</a></li>
                         </ul>
                       </div>
 </body>
